--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
+    implementation 'com.beust:klaxon:5.0.1'
     compile 'no.tornado:tornadofx:1.7.19'
     compile 'org.joml:joml-jdk8:1.9.14'
 
