Avanço nas funções de exportação para json

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    implementation 'com.beust:klaxon:5.0.1'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.9'
     compile 'no.tornado:tornadofx:1.7.19'
     compile 'org.joml:joml-jdk8:1.9.14'
 
