--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ kotlin {
             kotlinOptions.jvmTarget = '1.8'
         }
     }
-    js {
+    js(IR) {
         browser {
             testTask {
                 useKarma {
@@ -27,6 +27,7 @@ kotlin {
                 }
             }
         }
+        binaries.executable()
     }
     sourceSets {
         commonMain {
