--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    jcenter()
-    maven { url 'https://dl.bintray.com/kotlin/kotlinx' }
+    maven { url "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven" }
+    maven { url = uri("https://maven.pkg.jetbrains.space/data2viz/p/maven/public") }
 }
 
 kotlin {
@@ -31,6 +31,7 @@ kotlin {
     sourceSets {
         commonMain {
             dependencies {
+                implementation "io.data2viz.d2v:format:0.8.17"
             }
         }
         commonTest {
